--- a/references.bib
+++ b/references.bib
@@ -827,6 +827,15 @@
   url		= {https://github.com/plotly/plotly.js/issues/1316}
 }
 
+@misc{crossfilter2025,
+	title = {{Crossfilter Gotchas {$\cdot$} crossfilter/crossfilter Wiki}},
+	author = {{Gordon Woodhull}},
+	year = {2025},
+	month = mar,
+	note = {[Online; accessed 27. Mar. 2025]},
+	url = {https://github.com/crossfilter/crossfilter/wiki/Crossfilter-Gotchas}
+}
+
 @Misc{		  d3-scale2024,
   author	= {{Observable}},
   title		= {d3-scale {$\vert$} D3 by Observable},
