--- a/references.bib
+++ b/references.bib
@@ -62,7 +62,7 @@
 
 @article{wills2000,
   title={Natural selection: interactive subset creation},
-  author={Wills, Graham J},
+  author={Wills, Graham},
   journal={Journal of Computational and Graphical Statistics},
   volume={9},
   number={3},
